--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,1 +1,52 @@
-<h1>Simple Airbnb</h1>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container-fluid">
+    <h2>Simple Airbnb</h1>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+          <li class="nav-item active">
+            <%= link_to "Add a flat", new_flat_path %>
+          </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-12">
+      <h1>All our Flats (<%= @flats.count %>)</h1>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <% @flats.each do |flat| %>
+    <div class="col-4">
+      <div class="flat-card">
+        <div class="flat-card-content">
+          <div class="flat-card-title">
+            <h4><%= flat.name %></h4>
+          </div>
+          <p><%= flat.address %></p>
+          <div class="flex">
+            <div class="flex">
+              <i class="material-icons mr-2"></i><span><%= flat.number_of_guests %></span>
+            </div>
+            <div class="flex ml-3">
+              <i class="material-icons mr-2">€</i> <%= flat.price_per_night %>
+            </div>
+          </div>
+        </div>
+        <div class="flat-card-actions">
+          <%= link_to 'More info', flat_path(flat) %>
+          <%= link_to 'Edit', edit_flat_path(flat), class: 'ml-3 text-warning' %>
+          <%= link_to "Remove", flat_path(flat),
+              method: :delete,
+              data: { confirm: "Are you sure?" },
+              class: 'ml-3 text-danger'
+          %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
